change the index file to index.html

--- a/index.html
+++ b/index.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <title>About</title>
-      <style>
-        body{
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv5MymzxlWWtTmwjyMGmtuMO37SXTgpJpcmoNwremkpOOOi-bu1Q);
-    padding: 20px;
-        }
-        h1{
-          text-align: center;
-          color: blue;
-        }
-      </style>
-  </head>
-  <body>
-        <h1>PROJECTS</h1>
-        <p>At Moringa school I have created projects which are mostly practice.THis is usually to sharpen my coding skills.Which is really happening.</p>
-        <p>I haven't created the most projects but below is a list of the few that I have.I have also included a little description for them.</p>
-          <ol>
-              <li><a href="https://github.com/Victorvick399/Recipe">Recipe</a></li>
-                    <p>I used this during the period I learning how to fork from Github.The language mostly used on this project is HTML but there is also a little bit of CSS.It mostly uses HTML and a bit of CI think it was basic 
-                    and not really difficult.
-                    </p>
+    <head>
+        <title>vickportfolio</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="first">
+        <h1><strong>VICTOR</strong></h1>
+            <img src="./images/vexus.jpg" alt="ME" id="my-image">
+            <div class="intro">
+            <ul>
+                <li><strong>Name</strong>: <em>Victor Ndungi</em></li>
+                <li><strong>Nationality</strong>: <em>Kenyan</em></li>
+                <li><strong>Profession</strong>:<em>Software Developer</em></li>
 
-              <li><a href="https://github.com/Victorvick399/First-website">First-website</a></li>
-                   <p>This is the first webpage I have created in my life.For now it does not have a lot on design but I will work on it.
-                    I used HTML to build it but later added some CSS.
-                   </p>
-              <li><a href="https://github.com/Victorvick399/Hello-world">Hello-world</a></li>
-                   <p>This is a project that I did to help me practise.To practise for HTML and CSS.
-                      It helped me so much improve on them both.Mostly because practise is essential when it comes to both. 
-                   </p>   
-  </body>
-</html> 
+            </ul>
+            </div>
+            </div>
+            <h2>About me</h2>
+                <p>I am an ambitious introvert.I am just from high school and I am praying that everything goes well for me.I decided to take programming because since I was young I have always loved tech.I have always been intrigued with websites and apps and very much more.As soon as I heard that I heard that I a chance to create or be atleast a part of this great world I couldn't refuse it.This is because in the near future everything will mostly go digital.Not only will this benefit me financially but also it will give me an opportunity to become a part of the new generation that will make almost evrything digital.I am also a huge <em>Manchester United</em> fanatic.I sadly don't have the best communication skills bit I make up for it with working extremely hard.I not only work hard but also work smart.This is not only to increase my output but also to increase the quality of my output.</p>        
+            <h2>Interests</h2>    
+    </body>
+</html>
